<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:weightSum="1"
    android:orientation="vertical"
    >


    <TextView
    android:layout_width="wrap_content"
    android:layout_height="35dp"
    android:layout_margin="20dp"
    android:inputType="textPersonName"
    android:text="@string/textView5"
    android:ems="100"
    android:id="@+id/textView5"
    android:textAlignment="center"
    android:textStyle="bold"
    android:background="@color/colorPrimary"
    android:textSize="30dp"/>


    <ListView
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_margin="20dp"
        android:background="@color/colorBackground"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_margin="20dp"
        android:inputType="textPersonName"
        android:text="@string/textView6"
        android:ems="100"
        android:id="@+id/textView6"
        android:textAlignment="center"
        android:textStyle="bold"
        android:background="@color/colorPrimary"
        android:textSize="30dp"/>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_margin="20dp"
        android:background="@color/colorBackground"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_margin="20dp"
        android:inputType="textPersonName"
        android:text="@string/textView7"
        android:ems="100"
        android:id="@+id/textView7"
        android:textAlignment="center"
        android:textStyle="bold"
        android:background="@color/colorPrimary"
        android:textSize="30dp"/>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_margin="20dp"
        android:background="@color/colorBackground"/>



</LinearLayout>