<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:weightSum="1"
    android:orientation="vertical"
    >
    <TextView
        android:text="@string/textView3"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:id="@+id/textView3"
        android:textSize="25dp"
        android:textAlignment="center"
        android:background="@color/colorAccent"
        />



    <EditText
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:inputType="textPersonName"
        android:text="@string/editText"
        android:ems="100"
        android:id="@+id/editText"
        android:background="@color/colorBackground"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/textView3"
        android:textSize="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp" />

    <Button
        android:id="@+id/button7"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/editText"
        android:layout_weight="0.1"
        android:text="Elige el supermercado"
        android:textSize="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        style="@style/EstiloButton"/>

    <Button
        android:text="Añadir foto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button8"
        android:layout_weight="0.1"
        android:textSize="20dp"
        android:onClick="onClick"
        android:layout_alignBottom="@+id/imageView7"
        android:layout_alignRight="@+id/spinner"
        android:layout_alignEnd="@+id/spinner"
        android:layout_marginBottom="22dp"
        android:layout_toRightOf="@+id/button9"
        android:layout_toEndOf="@+id/button9"
        style="@style/EstiloButton"/>

    <Button
        android:text="@string/button9"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:id="@+id/button9"
        android:layout_weight="0.1"
        android:textSize="20dp"
        android:onClick="onClick"
        android:layout_alignBaseline="@+id/button10"
        android:layout_alignBottom="@+id/button10"
        android:layout_alignLeft="@+id/imageView7"
        android:layout_alignStart="@+id/imageView7"
        style="@style/EstiloButton"/>


    <Button
        android:text="@string/button10"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="39dp"
        android:id="@+id/button10"
        android:layout_weight="0.1"
        android:textSize="20dp"
        android:onClick="onClick"
        android:layout_below="@+id/imageView7"
        android:layout_alignRight="@+id/editText"
        android:layout_alignEnd="@+id/editText"
        style="@style/EstiloButton"/>

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/button7"
        android:layout_alignTop="@+id/button7"
        android:layout_toRightOf="@+id/button7"
        tools:background="@color/colorBackground"
        android:layout_alignRight="@+id/editText"
        android:layout_alignEnd="@+id/editText" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:srcCompat="@color/colorPrimaryDark"
        android:layout_below="@+id/button7"
        android:layout_alignLeft="@+id/button7"
        android:layout_alignStart="@+id/button7"
        />

</RelativeLayout>